Responsive: school and training block done

--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -51,22 +51,22 @@ body
 
         .header__menu
           .header__list
-            a.header__list-item(href="#")
+            a.header__list-item(href="#school")
               | О школе
-            a.header__list-item(href="#")
+            a.header__list-item(href="#training")
               | Формы обучения
-            a.header__list-item(href="#")
+            a.header__list-item(href="#learning")
               | Программы обучения
-            a.header__list-item(href="#")
+            a.header__list-item(href="#teacher")
               | Преподаватели
           .header__list
-            a.header__list-item(href="#")
+            a.header__list-item(href="#purpose")
               | Цель обучения
-            a.header__list-item(href="#")
+            a.header__list-item(href="#advantage")
               | Преимущества нашей школы
-            a.header__list-item(href="#")
+            a.header__list-item(href="#english")
               | Китайский на английском
-            a.header__list-item(href="#")
+            a.header__list-item(href="#map")
               | Контакты
 
       .header-contact
@@ -77,26 +77,20 @@ body
     
     .header__arrow
   
-  .school
+  .school#school
     .school-about
       .container
         .school-headings
           .school-headings__title
-            | Изучение
-            br
-            | китайского
-            br
-            | языка
+            | Изучение <br> китайского <br> языка
           .school-headings__subtitle
-            | школа «Лингво East»
-            br
-            | в Ростове-на-Дону
+            | школа «Лингво East» <br> в Ростове-на-Дону
         
         .school-info
           .school-info__text
             | Языковая школа lingvoeast, первая языковая школа в Ростове на Дону специализирующаяся  на преподавании восточных языков и в первую очередь на обучении китайскому языку! 
           .school-info__text
-            | В нашей школе применяются современные методики, разработанные в лучших вузах ни только России но и Китая  
+            | В нашей школе применяются современные методики, разработанные в лучших вузах ни только России но и Китая
             | и основанные на использовании в учебном процессе этимологических особенностей китайского языка.
             | Индивидуальный подход и поэтапная программа обучения, позволят Вам быстро и качественно овладеть китайским языком!
             span еще
@@ -140,7 +134,7 @@ body
             .school-features__text
               | Наш подход позволит Вам стать ни только активным пользователем китайского языка но и даст Вам уверенное понимание его синтаксиса и грамматики.
       
-  .training
+  .training#training
     .container
       .training__title
         | Форма обучения китайскому языку
@@ -181,7 +175,7 @@ body
           .button.button-nobg.training-features__button
             | пробное занятие
   
-  .purpose
+  .purpose#purpose
     .container
       .purpose-info
         .purpose-info__title
@@ -193,7 +187,7 @@ body
         .button.button-nobg.purpose-info__button
           | пробное занятие
   
-  .advantage
+  .advantage#advantage
     .container
       .advantage__title
         | Приемущества школы Лингво East
@@ -244,7 +238,7 @@ body
             .advantage-features__text
               | В нашей школе мы можем предложить Вам широкий выбор учебных программ, отвечающих различным языковым уровням и пожеланиям обучающихся.
   
-  .teacher
+  .teacher#teacher
     .container
       .teacher__title
         | Старший преподаватель школы
@@ -265,7 +259,7 @@ body
           .teacher-info__text
             | — лауреат конкурса лучший преподаватель китайского языка 2012, 2013, 2014 годов
   
-  .learning
+  .learning#learning
     .container
       .learning__title
         | Программы обучения китайскому языку
@@ -313,7 +307,7 @@ body
             .learning-item__text
               | Вы получите знания и навыки, необходимые для сдачи HSK. Данный курс опирается на базовую грамматику. И в связи с этим занятия проводятся 2 раза в неделю. Подробнее о самом экзамене мы расскажем позже. А пока предупредим, что для успешного обучения в университетах Китая. Вам необходим минимум 4 уровень HSK(их всего 6). Данный уровень послужит отличной основой для освоения специализированной лексики на любом факультете китайского университета.
   
-  .english
+  .english#english
     .english-photo
     .english-info
       .english-info__title
@@ -336,7 +330,7 @@ body
           | Кафе Конь-Самовар
     #map
   
-  .footer
+  .footer#footer
     .container
       .footer-info
         .footer-info__title
