--- a/app/stylesheets/sections/_school.scss
+++ b/app/stylesheets/sections/_school.scss
@@ -53,13 +53,13 @@
   }
 
   &-info__hidden {
-    margin-top: 28px;
-
     overflow: hidden;
     max-height: 0;
 
     transition: max-height 1s ease;
     will-change: max-height;
+
+    margin-top: 28px;
 
     &.school-info__hidden--active {
       max-height: 9999px;
@@ -142,5 +142,85 @@
     color: #000000;
     letter-spacing: 0.81px;
     line-height: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .school {
+    .container {
+      display: block;
+    }
+
+    &-about {
+      padding: 20px 0 30px;
+    }
+
+    &-headings {
+      margin-bottom: 17px;
+    }
+
+    &-headings__title {
+      font-size: 28px;
+      color: #000000;
+      letter-spacing: 1.75px;
+      line-height: 34px;
+    }
+
+    &-headings__subtitle {
+      margin-top: 7px;
+
+      font-size: 20px;
+      color: #E30713;
+      letter-spacing: 1.25px;
+      line-height: 24px;
+    }
+
+    &-headings__title br:last-child {
+      display: none;
+    }
+
+    &-info__text {
+      font-size: 13px;
+      letter-spacing: 0.88px;
+      line-height: 17px;
+
+      margin-bottom: 17px;
+    }
+
+    &-features {
+      padding: 30px 0 40px;
+    }
+
+    &-features .container {
+      display: block;
+    }
+
+    &-features__item--3 {
+      margin-bottom: 46px;
+    }
+
+    &-features__icon {
+      flex: 0 0 65px;
+      height: 65px;
+
+      margin-right: 24px;
+    }
+
+    &-features__info {
+      margin-top: 0;
+    }
+
+    &-features__title {
+      font-size: 18px;
+      letter-spacing: 1.04px;
+    }
+
+    &-features__text {
+      margin-top: 6px;
+
+      font-size: 10px;
+      letter-spacing: 0.4px;
+      line-height: 14px;
+    }
   }
 }
