--- a/app/stylesheets/sections/_training.scss
+++ b/app/stylesheets/sections/_training.scss
@@ -82,3 +82,67 @@
     margin-top: 30px;
   }
 }
+
+@media (max-width: 768px) {
+  .training {
+    padding: 20px 0 40px;
+
+    &__title {
+      font-size: 24px;
+      color: #000000;
+      letter-spacing: 1.5px;
+    }
+
+    &__subtitle {
+      margin-top: 15px;
+
+      font-size: 13px;
+      color: #000000;
+      letter-spacing: 0.88px;
+      line-height: 17px;
+
+      max-width: 100%;
+    }
+
+    &-features {
+      flex-flow: row wrap;
+    }
+
+    &-features__item {
+      flex: 0 0 50%;
+
+      &--1,
+      &--2 {
+        margin-bottom: 38px;
+      }
+    }
+
+    &-features__icon {
+      width: 90px;
+      height: 90px;
+    }
+
+    &-features__title {
+      margin-top: 16px;
+      margin-bottom: 4px;
+
+      font-size: 16px;
+      color: #000000;
+      letter-spacing: 0.92px;
+    }
+
+    &-features__text {
+      display: none;
+    }
+
+    &-features__button {
+      margin: 0;
+      border: none;
+      padding: 0;
+      font-size: 10px;
+      color: #E20F18 !important;
+      letter-spacing: 0.81px;
+      line-height: 14px;
+    }
+  }
+}
