--- a/app/stylesheets/sections/_purpose.scss
+++ b/app/stylesheets/sections/_purpose.scss
@@ -31,3 +31,33 @@
     margin-top: 22px;
   }
 }
+
+@media (max-width: 768px) {
+  .purpose {
+    background-position: right center;
+
+    .container {
+      justify-content: center;
+    }
+
+    &-info {
+      flex: 1;
+    }
+
+    &-info__title {
+      font-size: 24px;
+      letter-spacing: 1.5px;
+    }
+
+    &-info__text {
+      margin-top: 15px;
+      font-size: 13px;
+      letter-spacing: 0.88px;
+      line-height: 17px;
+    }
+
+    &-info__button {
+      margin-top: 20px;
+    }
+  }
+}
