--- a/app/stylesheets/sections/_school.scss
+++ b/app/stylesheets/sections/_school.scss
@@ -195,8 +195,13 @@
       display: block;
     }
 
-    &-features__item--3 {
-      margin-bottom: 46px;
+    &-features__item {
+      flex: 1;
+      margin-bottom: 21px
+    }
+
+    &-features__item--4 {
+      margin-bottom: 0px
     }
 
     &-features__icon {
@@ -207,7 +212,7 @@
     }
 
     &-features__info {
-      margin-top: 0;
+      margin-top: 2px;
     }
 
     &-features__title {
