--- a/app/stylesheets/sections/_footer.scss
+++ b/app/stylesheets/sections/_footer.scss
@@ -145,3 +145,58 @@
     letter-spacing: 1.57px;
   }
 }
+
+@media (max-width: 768px) {
+  .footer {
+    padding: 48px 0 58px;
+
+    .container {
+      display: block;
+    }
+
+    &-info {
+      padding-right: 0;
+      text-align: left;
+    }
+
+    &-info__title {
+      margin-bottom: 26px;
+
+      font-size: 24px;
+      letter-spacing: 1.5px;
+      br {
+        display: none;
+      }
+    }
+
+    &-info__subtitle {
+      display: none;
+    }
+
+    &-socials {
+      display: none;
+    }
+
+    &-form__input,
+    &-form__textarea {
+      font-size: 16px;
+      letter-spacing: 0.8px;
+      line-height: 33px;
+    }
+
+    &-form__button {
+      margin-top: 42px;
+      width: 100%;
+      text-align: center;
+    }
+
+    &__up {
+      margin-top: 27px;
+
+      position: static;
+      display: block;
+      width: 100%;
+      text-align: center;
+    }
+  }
+}
