--- a/app/stylesheets/sections/_english.scss
+++ b/app/stylesheets/sections/_english.scss
@@ -28,3 +28,28 @@
     line-height: 28px;
   }
 }
+
+@media (max-width: 768px) {
+  .english {
+    &-photo {
+      flex: 0 0 21%;
+      background-position: 68.5% center;
+    }
+
+    &-info {
+      flex: 0 0 79%;
+      padding: 20px 20px 25px;
+    }
+
+    &-info__title {
+      font-size: 24px;
+      letter-spacing: 1.5px;
+    }
+
+    &-info__text {
+      font-size: 12px;
+      letter-spacing: 0.81px;
+      line-height: 17px;
+    }
+  }
+}
