Responsive: learning section & fixes

--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -271,9 +271,7 @@ body
             .learning-item__title
               | Общий курс китайского языка
             .learning-item__text
-              | Общий курс рассчитан на три академических семестра. Минимальное количество занятий не менее 6 часов в неделю, с условием усиленной домашней работы обучающихся, не менее 4 часов в неделю. Программа общего курса китайского языка и культуры Китая предназначена для студентов ранее не изучавших китайский язык и культуру Китая.
-            .learning-item__text
-              | Основной конечной целью обучения, является приобретение учащимися знаний базовой грамматики китайского языка, овладение фонетикой, а также умением писать и читать на китайском языке. По окончании обучения учащиеся усвоят объём лексики, равный приблизительно 1500 знаков, что составляет около 2000 слов. Студенты научатся владеть устным и письменным языком в объёме изученного материала и смогут общаться на общие и бытовые темы. Также предусматриваются лекции по китайской культуре, деловой этике и традициям китайского народа.
+              | Общий курс рассчитан на три академических семестра. Минимальное количество занятий не менее 6 часов в неделю, с условием усиленной домашней работы обучающихся, не менее 4 часов в неделю. Программа общего курса китайского языка и культуры Китая предназначена для студентов ранее не изучавших китайский язык и культуру Китая. <br><br>Основной конечной целью обучения, является приобретение учащимися знаний базовой грамматики китайского языка, овладение фонетикой, а также умением писать и читать на китайском языке. По окончании обучения учащиеся усвоят объём лексики, равный приблизительно 1500 знаков, что составляет около 2000 слов. Студенты научатся владеть устным и письменным языком в объёме изученного материала и смогут общаться на общие и бытовые темы. Также предусматриваются лекции по китайской культуре, деловой этике и традициям китайского народа.
 
         .learning-item.learning-item--2
           .learning-item__image
