--- a/app/stylesheets/sections/_learning.scss
+++ b/app/stylesheets/sections/_learning.scss
@@ -55,7 +55,7 @@
   }
 
   &-item__info {
-    
+
   }
 
   &-item__title {
@@ -77,6 +77,75 @@
 
     &:last-child {
       margin-bottom: 0;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .learning {
+    padding: 32px 0 44px;
+
+    &__title {
+      font-size: 24px;
+      letter-spacing: 1.5px;
+    }
+
+    &-list {
+      margin-top: 17px;
+      display: block;
+    }
+
+    &-item {
+      padding: 15px 0;
+      margin-bottom: 0px;
+
+      display: block;
+      border-bottom: 1px #979797 solid;
+
+      position: relative;
+
+      &:after {
+        content: '';
+        background: url('../images/arrow_down.svg') no-repeat center center / contain;
+        height: 14px;
+        width: 14px;
+        position: absolute;
+        right: 0px;
+        top: 18px;
+
+        transition: transform 0.3s ease;
+        will-change: transform;
+      }
+
+      &--active:after {
+        transform: rotate(180deg);
+      }
+    }
+
+    &-item__image {
+      display: none;
+    }
+
+    &-item__title {
+      margin-bottom: 0;
+
+      font-size: 18px;
+      letter-spacing: 1.04px;
+      line-height: 20px;
+
+      padding-right: 50px;
+    }
+
+    &-item__text {
+      display: none;
+      margin-top: 15px;
+
+      font-size: 13px;
+      line-height: 16px;
+      letter-spacing: 0.51px;
+
+      transition: max-height 1s ease;
+      will-change: max-height;
     }
   }
 }
