--- a/app/stylesheets/sections/_purpose.scss
+++ b/app/stylesheets/sections/_purpose.scss
@@ -38,11 +38,12 @@
     background-position: right center;
 
     .container {
-      justify-content: center;
+      justify-content: flex-end;
+      text-align: right;
     }
 
     &-info {
-      flex: 1;
+      flex: 0 0 50%;
     }
 
     &-info__title {
@@ -59,6 +60,19 @@
 
     &-info__button {
       margin-top: 20px;
+    }
+  }
+}
+
+@media (max-width: 425px) {
+  .purpose {
+    .container {
+      justify-content: center;
+      text-align: left;
+    }
+
+    &-info {
+      flex: 1;
     }
   }
 }
