Update: link color & inputs border-radius

--- a/app/stylesheets/sections/_footer.scss
+++ b/app/stylesheets/sections/_footer.scss
@@ -98,7 +98,7 @@
       width: 100%;
       border: none;
       border-bottom: 1px #000000 solid;
-      
+      border-radius: 0;
       -webkit-appearance: none;
 
       &::-webkit-input-placeholder {
