--- a/app/index.static.jade
+++ b/app/index.static.jade
@@ -24,7 +24,7 @@ head
     function initMap() {
       var marker = {lat: 47.2272931, lng: 39.7231895}
       var center = document.body.clientWidth < 768 ?
-        {lat: 47.2272931, lng: 39.7231895} : { lat: 47.2272931, lng: 39.7210008 }
+        { lat: 47.2272931, lng: 39.7231895 } : { lat: 47.2272931, lng: 39.7210008 }
 
       var map = new google.maps.Map(document.getElementById('map'), {
         center: center,
@@ -63,7 +63,7 @@ body
           | Преимущества нашей школы
         a.header-menu__item(href="#english")
           | Китайский на английском
-        a.header-menu__item(href="#map")
+        a.header-menu__item(href="#map-link")
           | Контакты
         a.header-menu__item(href="#footer")
           | Позвонить сейчас
@@ -102,7 +102,7 @@ body
         a.button.header-contact__button(href="#footer")
           | пробное занятие
     
-    .header__arrow
+    a.header__arrow(href="#school")
   
   .school#school
     .school-about
@@ -344,7 +344,7 @@ body
       a.button.button-nobg.english-info__button(href="#footer")
         | пробное занятие
   
-  .map
+  .map#map-link
     .container
       .map-popup
         .map-popup__text
@@ -367,19 +367,17 @@ body
           a.footer-socials__vk(target="_blank" href="http://vk.com")
           a.footer-socials__you(target="_blank" href="http://youtube.com")
 
-      form.footer-form
+      form.footer-form(method="POST" action="/contact.php")
         .footer-form__input
-          input(type="text" placeholder="ФИО")
+          input(type="text" id="name" name="name" placeholder="Имя" autocomplete="off")
         .footer-form__input
-          input(type="email" placeholder="E-mail")
+          input(type="email" id="email" name="email" placeholder="E-mail" autocomplete="off")
         .footer-form__input
-          input(type="number" placeholder="Телефон")
-        .footer-form__input
-          input(type="text" placeholder="Интересующая программа")
+          input(type="text" id="phone" name="phone" placeholder="Телефон" autocomplete="off")
         .footer-form__textarea
-          textarea(placeholder="Ваше сообщение")
-        .footer-form__button.button.button-nobg
-          | отправить заявку
+          textarea(placeholder="Ваше сообщение / интересующая программа занятий" id="message" name="message")
+        button.footer-form__button.button.button-nobg(type="submit")
+          | Отправить сообщение
       
       .footer-socials--mobile
         a.footer-socials__fb(target="_blank" href="http://facebook.com")
